Fix line breaks in poem, Change URL credit

--- a/css/readings.css
+++ b/css/readings.css
@@ -9,9 +9,9 @@ p {
 
 /* -- Classes -- */
 
-.uppercase {
-  text-transform: uppercase;
-  }
+.curriculum {
+	margin: 3em auto;
+	}
 
 
 /* -- IDs -- */
